--- a/front-portal/src/styles/Header.module.scss
+++ b/front-portal/src/styles/Header.module.scss
@@ -14,13 +14,45 @@
     margin-left: 8px;
     text-transform: uppercase;
     color: yellow;
-
+    // font-family: 'Roboto Bold';
+  
     h1{
       margin-bottom: -15px;
       font-size: 50px;
+      font-family: 'Roboto Bold';
+
+    @media screen and (max-width: 420px) {
+        h1 {
+          font-size: 40px
+         }
+    
+      }
+       
       }
     h2{
-      font-size: 16px
+      font-size: 16px;
+      font-family: 'Roboto Bold';
       }
+
     }
 }
+  .navigation {
+    display: flex;
+    justify-content: center; 
+    margin-bottom: 10px;
+    border-width: 2px;
+
+    &__ul {
+      display: flex;
+      justify-items: center;
+
+      &__item {
+        padding-right: 10px;
+        text-transform: uppercase;
+
+        }
+      }
+
+    }
+
+ 
