--- a/front-portal/src/styles/Header.module.scss
+++ b/front-portal/src/styles/Header.module.scss
@@ -1,58 +1,53 @@
 .header {
-  display: flex;
-  align-items: center;
+  position: absolut;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 0 0;
+  z-index: 1;
   background: url('./image/icons/bgheader.png');
-  padding-top: 3px;
-  padding-bottom: 5px;
-  
-  
-  .logo {
+ 
+
+  &_container {
+    display: flex;
+    position: relative;
+    align-items: center;
+    }
+
+  .logo{
     width: 84px;
     height: 130px;
     }
-  .title {
+
+  .title{
     margin-left: 8px;
     text-transform: uppercase;
     color: yellow;
     // font-family: 'Roboto Bold';
-  
+  }
+
     h1{
-      margin-bottom: -15px;
-      font-size: 50px;
-      font-family: 'Roboto Bold';
+    margin-bottom: -15px;
+    font-size: 50px;
+    font-family: 'Roboto';
+    font-weight: 700;
 
     @media screen and (max-width: 420px) {
-        h1 {
-          font-size: 40px
-         }
-    
+        font-size: 40px;
       }
-       
-      }
+    }
+
     h2{
-      font-size: 16px;
-      font-family: 'Roboto Bold';
-      }
-
-    }
-}
-  .navigation {
-    display: flex;
-    justify-content: center; 
-    margin-bottom: 10px;
-    border-width: 2px;
-
-    &__ul {
-      display: flex;
-      justify-items: center;
-
-      &__item {
-        padding-right: 10px;
-        text-transform: uppercase;
-
-        }
-      }
-
+        font-size: 16px;
+        font-family: 'Roboto';
+        font-weight: 700;
+        margin-bottom: -10px;
     }
 
+    span {
+      font-size: 12px;
+      font-family: 'Roboto';
+      font-weight: 700;
+    }
  
+  }
